--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,30 @@
+
+
 body {
-  background pink;
+  background: pink url("img_tree.gif") no-repeat fixed center;
 }
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  font-size: 3em; 
 }
 
 h2 {
   color: green;
-  font-weight: normal
-  font-style: italic;
+  font-weight: normal;
+  font-style: normal;
 }
 
 .completed {
   font-family: 12px;
 }
 
+div.a {
+  font-size: 12px;
+}
+
 #tasks .completed {
-  backgound: #ccc;
+
+  background: lightblue url("img_tree.gif") no-repeat fixed center;
   text-decoration: underline;
 }
